# Goolenet_Model

./: .gitlab-ci.yml  CMakeLists.txt  README.md
source/: main.cpp
